--- a/ScreenCaptureVideoWPF.csproj
+++ b/ScreenCaptureVideoWPF.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B254295D-7953-4CBF-809D-5E9FCBF21CB3}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SreenCaptureVideoWPF</RootNamespace>
-    <AssemblyName>SreenCaptureVideoWPF</AssemblyName>
+    <RootNamespace>ScreenCaptureVideoWPF</RootNamespace>
+    <AssemblyName>ScreenCaptureVideoWPF</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
