--- a/ScreenCaptureVideoWPF.csproj
+++ b/ScreenCaptureVideoWPF.csproj
@@ -88,6 +88,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Encoding.cs" />
     <Compile Include="HelperClasses.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
